--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/vassiliy278/NodeJS_homeworks/issues"
   },
-  "homepage": "https://github.com/vassiliy278/NodeJS_homeworks#readme"
+  "homepage": "https://github.com/vassiliy278/NodeJS_homeworks#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
